# routes/index.js
@@ -8,5 +8,7 @@ router.get("/", (req, res) => {
 })
 
 router.use("/contacts", require("./contacts"))
+router.use("/students", require("./students"))
+router.use("/courses", require("./courses"))
 
 module.exports = router
